--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "magento2-quality-phpmd",
+    "name": "ainnomix/magento2-quality-phpmd",
     "type": "library",
     "license": "MIT",
     "authors": [
